--- a/Marvel/SettingFiles/Info.plist
+++ b/Marvel/SettingFiles/Info.plist
@@ -60,5 +60,20 @@
 	</array>
 	<key>Configuration</key>
 	<string>${CONFIGURATION}</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>example.com</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 </dict>
 </plist>
