--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -23,10 +23,13 @@ excluded: # paths to ignore during linting. Takes precedence over `included`.
   - MarvelTests
   - MarvelUITests
 analyzer_rules: # Rules run by `swiftlint analyze` (experimental)
-  - explicit_self
   - unused_import
   - unused_declaration
-
+  - explicit_self
+  
+unused_declaration:
+  include_public_and_open: true
+  
 # configurable rules can be customized from this configuration file
 # binary rules can set their severity level
 force_cast: warning # implicitly
